--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Access Secret File Example</title>
     <script>
-        fetch('/etc/secrets/test.txt')
+        fetch('test.txt')
             .then(response => response.text())
             .then(content => {
                 console.log('File contents:', content);
